2003-07-27  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/{ many }: search & fix some typos.

2003-07-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/define-grobs.scm (all-grob-descriptions): decrease space
	before clef.

	* flower/libc-extension.cc (my_round): ANSI-C compatible rounding.

2003-07-27  Rune Zedeler  <rz@daimi.au.dk>

	* Documentation/user/refman.itely (Percussion): Small
	clarifications and fixes.

	* scm/drums.scm: Bugfix: Use string instead of symbol when naming
	threads. This fixes different heads playing simultaneously.

2003-07-27  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/{ many }: increase readability (read through 
	User manual from `one big page').

2003-07-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/polymetric-differing-notes.ly: add example with
	disparate note values.

	* input/test/polymetric.ly: rename from poly-metric

	* scripts/ly2dvi.py (include_path): bugfix: use outbase
	iso. outname.

	* mf/feta-klef.mf: clef fixes, remove left/right spacing.  set
	G-clef bbox to real char extents. This fixes the G-clef being
	offset too much to the right.
	document perc clef offset.

	WARNING: FONT CHANGED.

	* Documentation/user/tutorial.itely (Tutorial): move menu.

2003-07-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* buildscripts/lilypond-profile.sh (Error): trim error message.

	* Documentation/user/invoking.itexi (Invoking the lilypond
	binary): add note about path.

	* Documentation/user/macros.itexi: add @c at EOL, hopefully
	suppresses superfluous spaces.

2003-07-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/lilypond-profile.sh: Add documentation to error
	message.

	* make/srcdir.make.in (web-install): Use SRCMAKE, set outdir.

2003-07-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: HTML fixes (by Michael Ossmann
	<mike@ossmann.com>)

	* Documentation/bibliography/computer-notation.bib (pages): prune
	unscientific language.
