@@ -1,3 +1,8 @@
+2003-07-28  Juergen Reuter  <reuter@ipd.uka.de>
+
+	* lily/vaticana-ligature-engraver.cc: bugfix: insert extra space
+	before flexa
+
 2003-07-27  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* input/test/{ many }: search & fix some typos.
